ファイルの精査、htmlの編集

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                     <div class="works1Description">
                         <span class="works1Title">Portfolio site</span><br />
                         <span>URL:</span><br />
-                        <span>ソースコード：</span><br />
+                        <span>ソースコード：https://github.com/guranytou/Portfolio-Site</span><br />
                         <span>説明：このサイトです。</span><br />
                         <span>使用した技術：HTML5,CSS,JQuery</span><br />
                     </div>
