リンク追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                     <img src="works1.jpg" class="works1Img"/>
                     <div class="works1Description">
                         <span class="works1Title">Portfolio site</span><br />
-                        <span>URL:</span><br />
+                        <span>URL:http://ayama.client.jp/portfolio.html</span><br />
                         <span>ソースコード：https://github.com/guranytou/Portfolio-Site</span><br />
                         <span>説明：このサイトです。</span><br />
                         <span>使用した技術：HTML5,CSS,JQuery</span><br />
