CSS変更、リンク追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
                     <img src="works1.jpg" class="works1Img"/>
                     <div class="works1Description">
                         <span class="works1Title">Portfolio site</span><br />
-                        <span>URL:http://ayama.client.jp/portfolio.html</span><br />
-                        <span>ソースコード：https://github.com/guranytou/Portfolio-Site</span><br />
+                        <span>URL:<a href="http://ayama.client.jp/portfolio.html">http://ayama.client.jp/portfolio.html</a></span><br />
+                        <span>ソースコード：<a href="https://github.com/guranytou/Portfolio-Site">https://github.com/guranytou/Portfolio-Site</a></span><br />
                         <span>説明：このサイトです。</span><br />
                         <span>使用した技術：HTML5,CSS,JQuery</span><br />
                     </div>
