--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,22 @@
                 <p>画像を押すと詳細が表示されます</p>
                 <div class="works1">
                     <img src="works1.jpg" class="works1Img"/>
-                    <div class="works1Description">
-                        <span class="works1Title">Portfolio site</span><br />
+                    <div class="works1Description descriptionDesign">
+                        <span class="worksTitle">Portfolio site</span><br />
                         <span>URL:<a href="http://ayama.client.jp/portfolio.html">http://ayama.client.jp/portfolio.html</a></span><br />
                         <span>ソースコード：<a href="https://github.com/guranytou/Portfolio-Site">https://github.com/guranytou/Portfolio-Site</a></span><br />
                         <span>説明：このサイトです。</span><br />
                         <span>使用した技術：HTML5,CSS,JQuery</span><br />
+                    </div>
+                </div>
+                <div class="works2">
+                    <img src="works2.jpg" class="works2Img"/>
+                    <div class="works2Description descriptionDesign">
+                        <span class="worksTitle">Portfolio site</span><br />
+                        <span>URL:<a href="http://ayama.client.jp/FizzBuzz2.html">http://ayama.client.jp/FizzBuzz2.html</a></span><br />
+                        <span>ソースコード：<a href="https://github.com/guranytou/FizzBuzz">https://github.com/guranytou/FizzBuzz</a></span><br />
+                        <span>説明：FizzBuzzがいろんな数字・文字列でできる</span><br />
+                        <span>使用した技術：HTML5,CSS,Javascript(Knockout.js)</span><br />
                     </div>
                 </div>
             </div>    
