タイトル修正忘れ

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 <div class="works2">
                     <img src="works2.jpg" class="works2Img"/>
                     <div class="works2Description descriptionDesign">
-                        <span class="worksTitle">Portfolio site</span><br />
+                        <span class="worksTitle">FizzBuzz</span><br />
                         <span>URL:<a href="http://ayama.client.jp/FizzBuzz2.html">http://ayama.client.jp/FizzBuzz2.html</a></span><br />
                         <span>ソースコード：<a href="https://github.com/guranytou/FizzBuzz">https://github.com/guranytou/FizzBuzz</a></span><br />
                         <span>説明：FizzBuzzがいろんな数字・文字列でできる</span><br />
