--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="ja">
 <head>
@@ -22,47 +22,63 @@
         <div id="profile">
             <span class="profileTitle"><i class="fas fa-user"></i> Profile</span>
             <div class="profileMain">
-                é«˜å°‚ç”Ÿã®æ™‚ã‹ã‚‰ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°ã‚’ã‚„ã£ã¦ã„ã¾ã™ã€‚<br>
-                ã‚¤ãƒ³ãƒ•ãƒ©ã¨WEBç³»ã®ãŠä»•äº‹ã«æºã‚ã£ã¦ã„ã¾ã—ãŸã€‚<br>
-                æŸå›³æ›¸é¤¨ã«ã¦ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆãƒãƒã‚¸ãƒ¡ãƒ³ãƒˆç­‰ã‚‚ã‚„ã£ã¦ã„ã¾ã—ãŸã€‚<br />
-                ä»Šã¯HTML5ã¨Javascriptã‚’ä¸»ã«ä½¿ç”¨ã—ã¦ã„ã¾ã™ã€‚<br />
+                ‚ê¶‚Ì‚©‚çƒvƒƒOƒ‰ƒ~ƒ“ƒO‚ğ‚â‚Á‚Ä‚¢‚Ü‚·B<br>
+                ƒCƒ“ƒtƒ‰‚ÆWEBŒn‚Ì‚¨d–‚ÉŒg‚í‚Á‚Ä‚¢‚Ü‚µ‚½B<br>
+                –^}‘ŠÙ‚É‚ÄƒvƒƒWƒFƒNƒgƒ}ƒlƒWƒƒ“ƒg“™‚à‚â‚Á‚Ä‚¢‚Ü‚µ‚½B<br />
+                ¡‚ÍHTML5‚ÆJavascript‚ğå‚Ég—p‚µ‚Ä‚¢‚Ü‚·B<br />
             </div>
             <div class="programmingLanguage">
                 <div class="programmingLanguageTitle">
-                    ä½¿ç”¨ã™ã‚‹è¨€èªã‚„æ©Ÿå™¨
+                    g—p‚·‚éŒ¾Œê‚â‹@Ší
                 </div>
                 <div class="programmingLanguageMain">
-                    è¨€èªï¼šHTML5,CSS3,Javascript,JQuery,Knockout.js<br />
-                    æ©Ÿå™¨ï¼šLinux(LPIC level1ä¿æœ‰),Cisco(L2,L3)
+                    Œ¾ŒêFHTML5,CSS3,Javascript,jQuery,Knockout.js<br />
+                    ‹@ŠíFLinux(LPIC level1•Û—L),Cisco(L2,L3)
                 </div>
             </div>
         </div>
         <div id="works">
             <span class="worksTitle"><i class="fas fa-code"></i> Works</span>
             <div class="worksMain">
-                <p>ç”»åƒã‚’æŠ¼ã™ã¨è©³ç´°ãŒè¡¨ç¤ºã•ã‚Œã¾ã™</p>
+                <p>‰æ‘œ‚ğ‰Ÿ‚·‚ÆÚ×‚ª•\¦‚³‚ê‚Ü‚·</p>
                 <div class="works1">
                     <img src="works1.jpg" class="works1Img"/>
                     <div class="works1Description descriptionDesign">
                         <span class="worksTitle">Portfolio site</span><br />
-                        <span>URL:<a href="http://ayama.client.jp/portfolio.html">http://ayama.client.jp/portfolio.html</a></span><br />
-                        <span>ã‚½ãƒ¼ã‚¹ã‚³ãƒ¼ãƒ‰ï¼š<a href="https://github.com/guranytou/Portfolio-Site">https://github.com/guranytou/Portfolio-Site</a></span><br />
-                        <span>èª¬æ˜ï¼šã“ã®ã‚µã‚¤ãƒˆã§ã™ã€‚</span><br />
-                        <span>ä½¿ç”¨ã—ãŸæŠ€è¡“ï¼šHTML5,CSS,JQuery</span><br />
+                        <span>URL:<a href="http://ayama.main.jp/portfolio.html">http://ayama.client.jp/portfolio.html</a></span><br />
+                        <span>à–¾F‚±‚ÌƒTƒCƒg‚Å‚·B</span><br />
+                        <span>g—p‚µ‚½‹ZpFHTML5,CSS,jQuery</span><br />
                     </div>
                 </div>
                 <div class="works2">
                     <img src="works2.jpg" class="works2Img"/>
                     <div class="works2Description descriptionDesign">
-                        <span class="worksTitle">Portfolio site</span><br />
-                        <span>URL:<a href="http://ayama.client.jp/FizzBuzz2.html">http://ayama.client.jp/FizzBuzz2.html</a></span><br />
-                        <span>ã‚½ãƒ¼ã‚¹ã‚³ãƒ¼ãƒ‰ï¼š<a href="https://github.com/guranytou/FizzBuzz">https://github.com/guranytou/FizzBuzz</a></span><br />
-                        <span>èª¬æ˜ï¼šFizzBuzzãŒã„ã‚ã‚“ãªæ•°å­—ãƒ»æ–‡å­—åˆ—ã§ã§ãã‚‹</span><br />
-                        <span>ä½¿ç”¨ã—ãŸæŠ€è¡“ï¼šHTML5,CSS,Javascript(Knockout.js)</span><br />
+                        <span class="worksTitle">FizzBuzz</span><br />
+                        <span>URL:<a href="http://ayama.main.jp/FizzBuzz2.html">http://ayama.client.jp/FizzBuzz2.html</a></span><br />
+                        <span>à–¾FFizzBuzz‚ª‚¢‚ë‚ñ‚È”šE•¶š—ñ‚Å‚Å‚«‚é</span><br />
+                        <span>g—p‚µ‚½‹ZpFHTML5,CSS,Javascript(Knockout.js)</span><br />
                     </div>
                 </div>
-            </div>    
-            
+                <div class="works3">
+                    <img src="works3.jpg" class="works3Img"/>
+                    <div class="works3Description descriptionDesign">
+                        <span class="worksTitle">Address¨PostCode</span><br />
+                        <span>URL:<a href="http://ayama.main.jp/Post-code.html">http://ayama.main.jp/Post-code.html</a></span><br />
+                        <span>à–¾FZŠ‚©‚ç—X•Ö”Ô†ŒŸõ‚ª‚Å‚«‚é</span><br />
+                        <span>g—p‚µ‚½‹ZpFHTML5,CSS,Javascript(Knockout.js)</span><br />
+                    </div>
+                </div>
+                <div class="works4">
+                    <img src="works4.jpg" class="works4Img"/>
+                    <div class="works4Description descriptionDesign">
+                        <span class="worksTitle">Œ»İˆÊ’u‚Ì“V‹C</span><br />
+                        <span>URL:<a href="https://main-ayama.ssl-lolipop.jp/weather.html">https://main-ayama.ssl-lolipop.jp/weather.html</a></span><br />
+                        <span>à–¾FŒ»İˆÊ’u‚Ì¡‚Ì“V‹C‚Æ–¾“ú–¾Œã“ú‚Ì“V‹C‚ª•ª‚©‚é</span><br />
+                        <span>g—p‚µ‚½‹ZpFHTML5,CSS,jQuery</span><br />
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
     <footer id="contact">
